src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Seniority_Qualification_AE__c</fullName>
        <label>Seniority Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C- Level</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seniority_Qualification_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Seniority_Qualification_SDR__c, &quot;C- Level&quot;), 4, 
 IF(ISPICKVAL(Seniority_Qualification_SDR__c, &quot;VP&quot;), 4, 
  IF(ISPICKVAL(Seniority_Qualification_SDR__c, &quot;Director&quot;), 3, 
   IF(ISPICKVAL(Seniority_Qualification_SDR__c, &quot;Manager&quot;), 2, 
    IF(ISPICKVAL(Seniority_Qualification_SDR__c, &quot;Individual Contributor&quot;), 1, null
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seniority Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seniority_Qualification_SDR__c</fullName>
        <label>Seniority Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C- Level</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_00_Entry_Date__c</fullName>
        <label>Stage 00 Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_00_Exit_Date__c</fullName>
        <label>Stage 00 Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_01_Entry_Date__c</fullName>
        <label>Stage 01 Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_01_Exit_Date__c</fullName>
        <label>Stage 01 Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_02_Entry_Date__c</fullName>
        <label>Stage 02 Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_02_Exit_Date__c</fullName>
        <label>Stage 02 Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is the date when the prospect will start their trial.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <description>Total Contract Value</description>
        <label>TCV</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Markets__c</fullName>
        <label>Target Markets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Criteria_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Technical criteria (e.g. low API usage) that will impact buying decision</inlineHelpText>
        <label>Technical Criteria Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Criteria_Details__c</fullName>
        <label>Technical Criteria Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Term_Length_months__c</fullName>
        <formula>CEILING(( Contract_End_Date__c  -  Contract_Start_Date__c ) / 365 * 12)</formula>
        <label>Term Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Qualification_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Timing_Qualification_AE__c, &quot;Can secure budget within 2 months&quot;), 4, 
 IF(ISPICKVAL(Timing_Qualification_AE__c, &quot;Can secure budget within 3 months&quot;), 3, 
  IF(ISPICKVAL(Timing_Qualification_AE__c, &quot;Can secure budget within 4 months&quot;), 2,  
    IF(ISPICKVAL(Timing_Qualification_AE__c, &quot;Can&apos;t secure budget within 4 months or unsure&quot;), 1, null
    )
   )
  )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timing Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Qualification_AE__c</fullName>
        <label>Timing Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Can secure budget within 2 months</fullName>
                </value>
                <value>
                    <fullName>Can secure budget within 3 months</fullName>
                </value>
                <value>
                    <fullName>Can secure budget within 4 months</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t secure budget within 4 months or unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing_Qualification_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Timing_Qualification_SDR__c, &quot;Can secure budget within 2 months&quot;), 4, 
 IF(ISPICKVAL(Timing_Qualification_SDR__c, &quot;Can secure budget within 3 months&quot;), 3, 
  IF(ISPICKVAL(Timing_Qualification_SDR__c, &quot;Can secure budget within 4 months&quot;), 2,  
    IF(ISPICKVAL(Timing_Qualification_SDR__c, &quot;Can&apos;t secure budget within 4 months or unsure&quot;), 1, null
    )
   )
  )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timing Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Qualification_SDR__c</fullName>
        <label>Timing Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Can secure budget within 2 months</fullName>
                </value>
                <value>
                    <fullName>Can secure budget within 3 months</fullName>
                </value>
                <value>
                    <fullName>Can secure budget within 4 months</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t secure budget within 4 months or unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Changes__c</fullName>
        <description>Date printed to track the change between two date fields (AE accepted, stage change, etc)</description>
        <label>Track Changes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verbal_Commit_from_Economic_Buyer_Detail__c</fullName>
        <label>Verbal Commit from Economic Buyer Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verbal_Commit_from_Economic_Buyer_Receiv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Verbal or written commitment to buy Node has been received from buyer (pending legal approval)</inlineHelpText>
        <label>Verbal Commit from Economic Buyer Receiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Change_Now_Details__c</fullName>
        <label>Why Change Now Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_Change_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Compelling reason(s) to change confirmed by buyer or champion</inlineHelpText>
        <label>Why Change Now?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Now_Details__c</fullName>
        <label>Why Now Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Compelling reason(s) to change NOW confirmed by buyer or champion</inlineHelpText>
        <label>Why Now?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Us_Details__c</fullName>
        <label>Why Us Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_Us__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Compelling reason(s) to change to Node confirmed by buyer or champion</inlineHelpText>
        <label>Why Us?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cas__ConnectAndSell_bookings_contribution__c</fullName>
        <label>ConnectAndSell Bookings Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nde__Company_Domain__c</fullName>
        <description>Node provided company domain name</description>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Available_Matches__c</fullName>
        <label>Node Available Matches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Node City Vertical Matches</fullName>
                </value>
                <value>
                    <fullName>Node City Matches</fullName>
                </value>
                <value>
                    <fullName>Node Vertical Matches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches_Context__c</fullName>
        <label>Node Best Matches Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches__c</fullName>
        <label>Node Best Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Category_Matches__c</fullName>
        <label>Node City and Category Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Subcategory_Matches__c</fullName>
        <label>Node City and Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context_Formula__c</fullName>
        <formula>BLANKVALUE(nde__Node_Context__c, &quot;Working on it...&quot;)</formula>
        <label>Node Context</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context__c</fullName>
        <defaultValue>&quot;Working on it...&quot;</defaultValue>
        <description>Node-generated context with relevant information about an opportunity.</description>
        <label>Node Context Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Data_Version__c</fullName>
        <label>Node Data Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education__c</fullName>
        <label>Node Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education_in_Common__c</fullName>
        <label>Node Education in Common</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated_Formula__c</fullName>
        <formula>IF( nde__Node_Generated__c, IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-generated-caps-2x-02.png&quot;, &quot;Node Generated&quot;, 12, 110),
IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-analyzed-caps-2x-02.png&quot;, &quot;Node Analyzed&quot;, 12, 99))</formula>
        <label>Node Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Node Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nde__Node_Internal__c</fullName>
        <description>This information in used by Node Sales Analyst</description>
        <label>Node Internal</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Last_Modified_Date__c</fullName>
        <label>Node Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority_Formula__c</fullName>
        <formula>CASE(nde__Node_Priority__c,
-1, &quot;N/A&quot;,
0, &quot;U&quot;,
1, &quot;C&quot;,
2, &quot;B&quot;, 
3, &quot;A&quot;, 
4, &quot;Closed&quot;,
10, &quot;D&quot;,
20, &quot;C&quot;,
30, &quot;B&quot;,
40, &quot;A&quot;,
100, &quot;Closed&quot;,
&quot;U&quot;)</formula>
        <label>Node Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Node Grade (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Subcategory_Matches__c</fullName>
        <label>Node Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Target_Profile__c</fullName>
        <label>Node Target Profile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Technologies_Found__c</fullName>
        <label>Node Technologies Found</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Technologies_Used__c</fullName>
        <description>A Node-provided list of technologies used by an organization.</description>
        <label>Node Technologies Used</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__You_Should_Mention__c</fullName>
        <defaultValue>&quot;Coming soon! Data will appear here once processing is complete.&quot;</defaultValue>
        <label>Node You Should Mention</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>Closed_Lost_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Lost_Reason_Detail__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closed Lost Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Current_Trials</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Trial Live</value>
        </filters>
        <label>Current Trials</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Next_Steps_Due_Today_and_overdue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Next Steps Due Today (and overdue)</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_Adam_Pierce</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Account_Development_Owner__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>AE_Accepted_Date__c</columns>
        <columns>Initial_Meeting_Date__c</columns>
        <columns>Initial_Meeting_Result__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notContain</operation>
            <value>Existing</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Pierce</value>
        </filters>
        <label>Open Opportunities - Adam Pierce</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_Ethan_Carr</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Account_Development_Owner__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>AE_Accepted_Date__c</columns>
        <columns>Initial_Meeting_Date__c</columns>
        <columns>Initial_Meeting_Result__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notContain</operation>
            <value>Existing</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Carr</value>
        </filters>
        <label>Open Opportunities - Ethan Carr</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_Forest_Spiegel</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Initial_Meeting_Date__c</columns>
        <columns>AE_Accepted_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Next_Scheduled_Activity_Details__c</columns>
        <columns>Next_Scheduled_Activity_Date__c</columns>
        <columns>Pain_Score__c</columns>
        <columns>Champion_Score__c</columns>
        <columns>Competitors_Score__c</columns>
        <columns>Economic_Buyer_Score__c</columns>
        <columns>Decision_Criteria_Score__c</columns>
        <columns>Decision_Process_Score__c</columns>
        <columns>Proof_of_Life_Score__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notContain</operation>
            <value>Existing</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Spiegel</value>
        </filters>
        <filters>
            <field>Initial_Meeting_Result__c</field>
            <operation>notEqual</operation>
            <value>,Reschedule Requested - By Contact,Reschedule Requested - By Opportunity Owner</value>
        </filters>
        <label>Open Opportunities - Forest Spiegel</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_Marshall_Serlin</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Account_Development_Owner__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>AE_Accepted_Date__c</columns>
        <columns>Initial_Meeting_Date__c</columns>
        <columns>Initial_Meeting_Result__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notContain</operation>
            <value>Existing</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Serlin</value>
        </filters>
        <label>Open Opportunities - Marshall Serlin</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_New</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Next_Scheduled_Activity_Date__c</columns>
        <columns>Next_Scheduled_Activity_Details__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Pain_Score__c</columns>
        <columns>Competitors_Score__c</columns>
        <columns>Champion_Score__c</columns>
        <columns>Economic_Buyer_Score__c</columns>
        <columns>Decision_Criteria_Score__c</columns>
        <columns>Decision_Process_Score__c</columns>
        <columns>Proof_of_Life_Score__c</columns>
        <columns>Commit_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>notContain</operation>
            <value>Existing</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Spiegel,McBeth</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_or_Add_On</value>
        </filters>
        <label>Open Opportunities - New</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities_Renewals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>Existing Customer - Renewal</value>
        </filters>
        <label>Open Opportunities - Renewals</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACV__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Payment_Schedule__c</columns>
        <columns>Non_Standard_Financial_Terms_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>nde__Node_Opportunities_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>nde__Node_Generated_Formula__c</columns>
        <columns>nde__Node_Priority_Formula__c</columns>
        <columns>nde__Node_Context__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nde__Node_Priority_Formula__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>Node Opportunities View</label>
    </listViews>
    <recordTypes>
        <fullName>Existing_Open_Opportunity</fullName>
        <active>false</active>
        <businessProcess>Existing Oppty</businessProcess>
        <label>Existing Open Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_or_Add_On</fullName>
        <active>true</active>
        <businessProcess>New or Add-On</businessProcess>
        <label>New or Add-On</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_or_Renewal_Add_On</fullName>
        <active>true</active>
        <businessProcess>Renewal or Renewal %2B Add-On</businessProcess>
        <label>Renewal or Renewal + Add-On</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AE_Qualification_Completion</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  ISPICKVAL( StageName , &quot;01 - Discovery&quot;),
   ISPICKVAL( StageName , &quot;02 - Business Validation&quot;),
    ISPICKVAL( StageName , &quot;03 - Solution Validation&quot;),
     ISPICKVAL( StageName , &quot;04 - Manage to Close&quot;),
      ISPICKVAL( StageName , &quot;05a - Closed Won&quot;))

&amp;&amp; 

OR(
ISBLANK( AE_Accepted_Date__c ),
NOT( ISPICKVAL( Initial_Meeting_Result__c ,&quot;Completed&quot;)),
Qualification_Score_AE__c =0)

&amp;&amp;

 
ISPICKVAL( Type , &quot;New&quot;)</errorConditionFormula>
        <errorMessage>All opportunities that progress past qualification stage must be accepted by the AE, have completed an initial meeting, and have AE qualification section completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Rules</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
((IsClosed = TRUE) &amp;&amp; ( Days_Until_Close__c &gt;0)),
((IsClosed = FALSE) &amp;&amp; ( Days_Until_Close__c &lt; 0))
)</errorConditionFormula>
        <errorMessage>Open: Close Date = estimated close date (must be in future). Won: Close Date = final contract signature date (must be today or in past). Lost: Close Date = when &quot;No&quot; was received (must be today or in past).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_details_validation</fullName>
        <active>true</active>
        <description>Ensure that contract start and end/renewal dates are included upon closed/won</description>
        <errorConditionFormula>IsWon = True 
&amp;&amp; 
OR(
ISBLANK( Contract_Start_Date__c ), 
ISBLANK( Contract_End_Date__c ),
ISBLANK( Amount ),
ISPICKVAL( Payment_Schedule__c ,&quot;&quot;) ,
ISBLANK( Contract_Signatory_Name__c ),
ISBLANK( Billing_Contact_Name__c ),
ISBLANK( Handoff_to_Customer_Success_Date__c )
)</errorConditionFormula>
        <errorMessage>Must include contract, billing/payment, and handoff info before closing a won opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_for_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
$RecordType.Name = &quot;New or Add-On&quot;,$RecordType.Name = &quot;Renewal or Renewal + Add-On&quot;), If(ISPICKVAL( Lost_Reason__c ,&apos;Timing - Future Opportunity&apos;)&amp;&amp; Follow_Up_Date__c  &lt; TODAY()+1,TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date should be future date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_for_Lost_Reson</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
$RecordType.Name = &quot;New or Add-On&quot;,$RecordType.Name = &quot;Renewal or Renewal + Add-On&quot;),If(ISPICKVAL(  Lost_Reason__c  ,&apos;Timing - Future Opportunity&apos;)&amp;&amp; ISBLANK( Follow_Up_Date__c ),TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_Meeting_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Initial_Meeting_Date__c ) &amp;&amp;  
ISPICKVAL( Initial_Meeting_Result__c , &quot;Scheduled&quot;) &amp;&amp;
ISPICKVAL( Type , &quot;New&quot;)</errorConditionFormula>
        <errorMessage>Initial Meeting Date cannot be blank when Initial Meeting Result is &quot;Scheduled&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_Meeting_Result</fullName>
        <active>true</active>
        <errorConditionFormula>(TODAY() &gt;  Initial_Meeting_Date__c) &amp;&amp;  
ISPICKVAL( Initial_Meeting_Result__c , &quot;&quot;) &amp;&amp;
ISPICKVAL( Type , &quot;New&quot;)</errorConditionFormula>
        <errorDisplayField>Account_Dev_Owner_User__c</errorDisplayField>
        <errorMessage>Enter disposition for Initial Meeting Results or update Initial Meeting Date to the newly scheduled time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Class_Cannot_be_Changed</fullName>
        <active>true</active>
        <description>Lead Class cannot be changed once it has been set upon creation.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00e37000000gogC&quot;,(ISCHANGED(Opportunity_Inbound_Outbound__c))
)</errorConditionFormula>
        <errorMessage>Lead Class cannot be changed, once it is set upon Opportunity creation. Please contact your system administrator to change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( StageName ,&quot;05b - Closed Lost&quot;)&amp;&amp; 
OR(
ISPICKVAL( Lost_Reason__c , &quot;&quot;),
ISBLANK( Lost_Reason_Detail__c ))</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>Lost Reason and Lost Reason Detail are required</errorMessage>
    </validationRules>
</CustomObject>